--- a/初识Python/第三章.Python变量和数据类型/1.Python中数据类型.md
+++ b/初识Python/第三章.Python变量和数据类型/1.Python中数据类型.md
@@ -1,7 +1,7 @@
 ###### 感谢 ： [慕课网](https://www.imooc.com "慕课网-程序员的梦工厂") 提供学习平台
 ###### 感谢 ： [廖雪峰](https://www.imooc.com/u/292120/courses?sort=publish "廖雪峰的课程") 的课程 [初识Python]( https://www.imooc.com/learn/177 "初识Python")
 
-# 第三章 Python中数据类型
+# 3.1 Python中数据类型
 
 
 计算机顾名思义就是可以做数学计算的机器，因此，计算机程序理所当然地可以处理各种数值。但是，计算机能处理的远不止数值，还可以处理文本、图形、音频、视频、网页等各种各样的数据，不同的数据，需要定义不同的数据类型。在Python中，能够直接处理的数据类型有以下几种：
